@@ -1,3 +1,6 @@
+2016/04/06: IGAS v80
+    1. Fix CodeEditor's render for hex numbers.
+
 2016/03/08: IGAS v79
     1. Fix ActionButton's vertex color for usable.
     2. Fix Mount ActionButton's activation.
